# hardwareConfig

./: .gitignore  CMakeLists.txt  README.md  cmakebuild.txt
src/camera/include/: GXIAPIBase.h  GXInterfaceInfoVector.h  GXSmartPtr.h  GalaxyIncludes.h  IGXDevice.h  IGXFactory.h  IGXFeatureControl.h  IGXImageFormatConvert.h  IGXImageProcess.h  IGXImageSpecialFunction.h  IGXInterface.h  IGXInterfaceInfo.h  IGXStream.h  IImageProcessConfig.h  autobackend.h  cameraCapture.h  constants.h  drawingutils.h  picprocess.h  yoloonnxdetector.h
src/camera/lib/: GxIAPICPPEx.lib
src/camera/src/: autobackend.cpp  cameraCapture.cpp  cameratest.cpp  common.cpp  copypic.txt  deletepic.txt  drawingutils.cpp  onnx_model_base.cpp  picprocess.cpp  yoloonnxdetector.cpp  二值化代码.txt
src/motor/include/: motorControl.h  serial.h
src/motor/src/: motorControl.cpp  motortest.cpp  serial.cpp  位置模式.md  速度模式.md
src/relay/include/: modbusTcp.h
src/relay/src/: modbusTcp.cpp  relaytest.cpp
